--- a/src/Pdf/ReadPdf/Templates/ReadTemplate.tt
+++ b/src/Pdf/ReadPdf/Templates/ReadTemplate.tt
@@ -6,6 +6,7 @@
 #>
 
 iTextSharp.text.pdf.PdfReader <#= readerPropertyName #> = null;
+
 try
 {
 <# 
@@ -54,11 +55,27 @@ private void ReadFormDataValues(string readerPropertyName, string outputProperty
 #>
 <#= ContextParameterName #>.Log(string.Format("Start reading form data of [{0}].", <#= PdfFilePathParameterName #>));
 iTextSharp.text.pdf.AcroFields form = <#= readerPropertyName #>.AcroFields;
+bool isXfaForm = form.Xfa.XfaPresent;
+
 <#+ if (FormExtraction == FormExtraction.List) { #>
-<#= outputPropertyName #>.<#= OutputFormDataListPropertyName #> = form.Fields.Keys.ToDictionary(key => key, key => form.GetField(key)).ToList();
+	if (isXfaForm)
+	{
+		iTextSharp.text.pdf.XfaForm xfaForm = new iTextSharp.text.pdf.XfaForm(<#= readerPropertyName #>);
+		<#= outputPropertyName #>.<#= OutputFormDataListPropertyName #> = xfaForm.DatasetsSom.Name2Node.ToDictionary(field => field.Key, field => field.Value.InnerText).ToList();
+	}
+	else
+	<#= outputPropertyName #>.<#= OutputFormDataListPropertyName #> = form.Fields.Keys.ToDictionary(key => key, key => form.GetField(key)).ToList();
 <#+ } else if (FormExtraction == FormExtraction.CustomType || FormExtraction == FormExtraction.Infer) { #>
 var result = Activator.CreateInstance<<#= OutputFormDataTypeName #>>();
-System.Collections.Generic.Dictionary<string, string> fields = form.Fields.Keys.ToDictionary(key => Twenty57.Linx.Plugin.Common.Names.GetValidName(key), key => form.GetField(key));
+System.Collections.Generic.Dictionary<string, string> fields = new Dictionary<string,string>();
+if (isXfaForm)
+{
+	iTextSharp.text.pdf.XfaForm xfaForm = new iTextSharp.text.pdf.XfaForm(<#= readerPropertyName #>);
+	fields = xfaForm.DatasetsSom.Name2Node.ToDictionary(field => Twenty57.Linx.Plugin.Common.Names.GetValidName(field.Key), field => field.Value.InnerText);
+}
+else
+	fields = form.Fields.Keys.ToDictionary(key => Twenty57.Linx.Plugin.Common.Names.GetValidName(key), key => form.GetField(key));
+
 foreach (System.Reflection.PropertyInfo property in typeof(<#= OutputFormDataTypeName #>).GetProperties())
 {
 	if (!fields.ContainsKey(property.Name))
