--- a/src/Pdf/ReadPdf/Templates/ReadTemplate.tt
+++ b/src/Pdf/ReadPdf/Templates/ReadTemplate.tt
@@ -59,20 +59,14 @@ bool isXfaForm = form.Xfa.XfaPresent;
 
 <#+ if (FormExtraction == FormExtraction.List) { #>
 	if (isXfaForm)
-	{
-		iTextSharp.text.pdf.XfaForm xfaForm = new iTextSharp.text.pdf.XfaForm(<#= readerPropertyName #>);
-		<#= outputPropertyName #>.<#= OutputFormDataListPropertyName #> = xfaForm.DatasetsSom.Name2Node.ToDictionary(field => field.Key, field => field.Value.InnerText).ToList();
-	}
+		<#= outputPropertyName #>.<#= OutputFormDataListPropertyName #> = form.Xfa.DatasetsSom.Name2Node.ToDictionary(field => field.Key, field => field.Value.InnerText).ToList();
 	else
 	<#= outputPropertyName #>.<#= OutputFormDataListPropertyName #> = form.Fields.Keys.ToDictionary(key => key, key => form.GetField(key)).ToList();
 <#+ } else if (FormExtraction == FormExtraction.CustomType || FormExtraction == FormExtraction.Infer) { #>
 var result = Activator.CreateInstance<<#= OutputFormDataTypeName #>>();
 System.Collections.Generic.Dictionary<string, string> fields = new Dictionary<string,string>();
 if (isXfaForm)
-{
-	iTextSharp.text.pdf.XfaForm xfaForm = new iTextSharp.text.pdf.XfaForm(<#= readerPropertyName #>);
-	fields = xfaForm.DatasetsSom.Name2Node.ToDictionary(field => Twenty57.Linx.Plugin.Common.Names.GetValidName(field.Key), field => field.Value.InnerText);
-}
+	fields = form.Xfa.DatasetsSom.Name2Node.ToDictionary(field => Twenty57.Linx.Plugin.Common.Names.GetValidName(field.Key), field => field.Value.InnerText);
 else
 	fields = form.Fields.Keys.ToDictionary(key => Twenty57.Linx.Plugin.Common.Names.GetValidName(key), key => form.GetField(key));
 
