--- a/src/Pdf/Read/Templates/ReadTemplate.tt
+++ b/src/Pdf/Read/Templates/ReadTemplate.tt
@@ -37,7 +37,7 @@ var pageList = new System.Collections.Generic.List<string>();
 
 for (int index = 1; index <= <#= readerPropertyName #>.NumberOfPages; index++)
 {	
-	var strategy = new Twenty57.Linx.Components.Pdf.ReadPdf.Helpers.TopToBottomTextExtractionStrategy();
+	var strategy = new Twenty57.Linx.Components.Pdf.Read.Helpers.TopToBottomTextExtractionStrategy();
 	pageList.Add(iTextSharp.text.pdf.parser.PdfTextExtractor.GetTextFromPage(<#= readerPropertyName #>, index, strategy));
 }
 <#+ if (TextSplit == TextSplit.Never) { #>
