--- a/src/Pdf/PluginIcon.xaml
+++ b/src/Pdf/PluginIcon.xaml
@@ -1,24 +1,1 @@
-<Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
-  <Canvas Width="16" Height="16" Canvas.Left="0" Canvas.Top="0">
-    <Canvas.RenderTransform>
-      <TranslateTransform X="0" Y="0"/>
-    </Canvas.RenderTransform>
-    <Canvas.Resources/>
-    <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="2" Canvas.Top="11" Width="1" Height="5" Fill="#000000"/>
-    <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="2" Canvas.Top="11" Width="3" Height="1" Fill="#000000"/>
-    <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="4" Canvas.Top="12" Width="1" Height="2" Fill="#000000"/>
-    <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="3" Canvas.Top="13" Width="1" Height="1" Fill="#000000"/>
-    <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="6" Canvas.Top="11" Width="1" Height="5" Fill="#000000"/>
-    <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="11" Canvas.Top="11" Width="1" Height="5" Fill="#000000"/>
-    <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="9" Canvas.Top="12" Width="1" Height="3" Fill="#000000"/>
-    <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="11" Canvas.Top="11" Width="3" Height="1" Fill="#000000"/>
-    <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="11" Canvas.Top="13" Width="3" Height="1" Fill="#000000"/>
-    <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#000000">
-      <Path.Data>
-        <PathGeometry Figures="M5.069 0L0 4.748V16h1v-1v-1V6h5V1h9v13v1v1h1V0H5.069z M5 5H1.329L5 1.312V5z" FillRule="NonZero"/>
-      </Path.Data>
-    </Path>
-    <Polygon xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Points="8,11 6,11 6,12 10,12 " FillRule="NonZero" Fill="#000000"/>
-    <Polygon xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Points="10,15 6,15 6,16 8,16 " FillRule="NonZero" Fill="#000000"/>
-  </Canvas>
-</Viewbox>
+<Grid xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"><Path Data="M15,0L5,0 4.042,0 4,0 3.042,0 3,0 3,0.042 0.042,3 0,3 0,3.042 0,4 0,4.021 0,5 0,15 0,16 1,16 15,16 16,16 16,15 16,1 16,0 15,0z M1,3.026L3.037,1 4,1 4,4 1,4 1,3.026z M15,15L1,15 1,5 4,5 5,5 5,4 5,1 15,1 15,15z" Fill="#FF000000" /><Path Data="M2,8L2,9 2,10 2,12 3,12 3,10 4,10 5,10 5,9 5,8 5,7 2,7 2,8z M3,8L4,8 4,9 3,9 3,8z" Fill="#FF000000" /><Path Fill="#FF000000" Stroke="{x:Null}"><Path.Data><PathGeometry Figures="M12,10L14,10 14,9 12,9 12,8 14,8 14,7 11,7 11,8 11,9 11,10 11,12 12,12z" /></Path.Data></Path><Path Data="M10,11L10,10 10,9 10,8 7,7 6,7 6,12 7,12 10,11z M7,8L9,8.667 9,10.334 7,11 7,8z" Fill="#FF000000" /></Grid>
